--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEGAHUB NETWORKS | Coming Soon</title>
+    <!-- Pre-shim process for libraries that expect a Node-like environment -->
+    <script>
+      window.process = {
+        env: {
+          NODE_ENV: 'production',
+          API_KEY: ''
+        }
+      };
+      var process = window.process;
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +26,7 @@
             background-color: #020617;
             color: #f8fafc;
             font-family: 'Inter', sans-serif;
-            overflow-x: hidden;
+            overflow: hidden; 
         }
         .font-heading {
             font-family: 'Space Grotesk', sans-serif;
@@ -32,19 +42,15 @@
     <script type="importmap">
     {
       "imports": {
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "react": "https://esm.sh/react@^19.2.3",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-        "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+        "react": "https://esm.sh/react@19.0.0",
+        "react/": "https://esm.sh/react@19.0.0/",
+        "react-dom": "https://esm.sh/react-dom@19.0.0",
+        "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+        "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+        "framer-motion": "https://esm.sh/framer-motion@11.11.17?external=react,react-dom",
+        "@google/genai": "https://esm.sh/@google/genai@1.34.0"
       }
     }
-    </script>
-    <!-- Fallback to prevent ReferenceError: process is not defined -->
-    <script>
-      if (typeof process === 'undefined') {
-        window.process = { env: { API_KEY: '' } };
-      }
     </script>
 </head>
 <body>
