--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             animation: pulse-slow 8s infinite ease-in-out;
         }
         #root:empty::before {
-            content: 'LOADING MEGAHUB...';
+            content: 'CONNECTING TO MEGAHUB...';
             position: absolute;
             top: 50%;
             left: 50%;
@@ -55,7 +55,7 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "framer-motion": "https://esm.sh/framer-motion@11.11.17?bundle&deps=react@19.0.0",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.17?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
