--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "framer-motion": "https://esm.sh/framer-motion@11.11.17?external=react,react-dom",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.17?bundle&deps=react@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.0.0/"
   }
 }
 </script>
