--- a/index.html
+++ b/index.html
@@ -25,29 +25,10 @@
 </script>
 </head>
 <body class="bg-[#020617] text-slate-100 overflow-x-hidden">
-    <!-- Ad Rails for Ultra-Wide Screens -->
-    <div class="fixed left-4 top-24 w-[160px] h-[600px] z-50 hidden xl:block ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden">
-        <script type="text/javascript">
-            atOptions = { 'key' : '3786c373fb067d1092814cd741ef7d0d', 'format' : 'iframe', 'height' : 600, 'width' : 160, 'params' : {} };
-        </script>
-        <script type="text/javascript" src="https://www.highperformanceformat.com/3786c373fb067d1092814cd741ef7d0d/invoke.js"></script>
-    </div>
-    <div class="fixed right-4 top-24 w-[160px] h-[600px] z-50 hidden xl:block ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden">
-        <script type="text/javascript">
-            atOptions = { 'key' : '3786c373fb067d1092814cd741ef7d0d', 'format' : 'iframe', 'height' : 600, 'width' : 160, 'params' : {} };
-        </script>
-        <script type="text/javascript" src="https://www.highperformanceformat.com/3786c373fb067d1092814cd741ef7d0d/invoke.js"></script>
-    </div>
 
-    <!-- Top Banner (728x90) -->
-    <div class="w-full flex justify-center py-2 bg-slate-900/30 border-b border-slate-800/50">
-        <div class="hidden md:block ad-container overflow-hidden">
-            <script type="text/javascript">
-                atOptions = { 'key' : 'ca62188f74ef0038211200819287107d', 'format' : 'iframe', 'height' : 90, 'width' : 728, 'params' : {} };
-            </script>
-            <script type="text/javascript" src="https://www.highperformanceformat.com/ca62188f74ef0038211200819287107d/invoke.js"></script>
-        </div>
-        <div class="md:hidden ad-container overflow-hidden">
+    <!-- Small Top Banner (320x50) - Dedicated Space, No Overlap -->
+    <div class="w-full flex justify-center py-2 bg-slate-900/50 border-b border-slate-800/50 relative z-[1002]">
+        <div class="ad-container overflow-hidden">
             <script type="text/javascript">
                 atOptions = { 'key' : '8b1e3d61861d1c17368c4fd4e1eecf52', 'format' : 'iframe', 'height' : 50, 'width' : 320, 'params' : {} };
             </script>
@@ -56,6 +37,58 @@
     </div>
 
     <div id="root"></div>
+
+    <!-- Bottom Ad Gallery - Dedicated Space for Larger Units -->
+    <section class="w-full bg-slate-950 border-t border-slate-800/50 py-10 px-6 mt-10">
+        <div class="max-w-[1400px] mx-auto">
+            <h2 class="text-xs font-black text-slate-700 tracking-[0.5em] uppercase mb-6 text-center">Network Sponsors</h2>
+            <div class="flex flex-wrap justify-center items-start gap-8">
+                <!-- 160x600 Rails Moved to Bottom -->
+                <div class="ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden shadow-2xl">
+                    <script type="text/javascript">
+                        atOptions = { 'key' : '3786c373fb067d1092814cd741ef7d0d', 'format' : 'iframe', 'height' : 600, 'width' : 160, 'params' : {} };
+                    </script>
+                    <script type="text/javascript" src="https://www.highperformanceformat.com/3786c373fb067d1092814cd741ef7d0d/invoke.js"></script>
+                </div>
+
+                <div class="flex flex-col gap-8">
+                    <!-- 728x90 Banner -->
+                    <div class="ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden shadow-2xl">
+                        <script type="text/javascript">
+                            atOptions = { 'key' : 'ca62188f74ef0038211200819287107d', 'format' : 'iframe', 'height' : 90, 'width' : 728, 'params' : {} };
+                        </script>
+                        <script type="text/javascript" src="https://www.highperformanceformat.com/ca62188f74ef0038211200819287107d/invoke.js"></script>
+                    </div>
+                    
+                    <div class="flex flex-wrap justify-center gap-8">
+                         <!-- 300x250 Banner -->
+                        <div class="ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden shadow-2xl">
+                            <script type="text/javascript">
+                                atOptions = { 'key' : '4f52a4b1f5dba3d1b6bf80d44634631d', 'format' : 'iframe', 'height' : 250, 'width' : 300, 'params' : {} };
+                            </script>
+                            <script type="text/javascript" src="https://www.highperformanceformat.com/4f52a4b1f5dba3d1b6bf80d44634631d/invoke.js"></script>
+                        </div>
+                        
+                        <!-- 468x60 Banner -->
+                        <div class="ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden shadow-2xl">
+                            <script type="text/javascript">
+                                atOptions = { 'key' : 'c992751dba51ea4600c3e3b94c90b0af', 'format' : 'iframe', 'height' : 60, 'width' : 468, 'params' : {} };
+                            </script>
+                            <script type="text/javascript" src="https://www.highperformanceformat.com/c992751dba51ea4600c3e3b94c90b0af/invoke.js"></script>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 160x600 Rails Moved to Bottom -->
+                <div class="ad-container border border-slate-800 bg-slate-900/50 rounded-xl overflow-hidden shadow-2xl">
+                    <script type="text/javascript">
+                        atOptions = { 'key' : '3786c373fb067d1092814cd741ef7d0d', 'format' : 'iframe', 'height' : 600, 'width' : 160, 'params' : {} };
+                    </script>
+                    <script type="text/javascript" src="https://www.highperformanceformat.com/3786c373fb067d1092814cd741ef7d0d/invoke.js"></script>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Adsterra Social Bar -->
     <script type='text/javascript' src='//pl28380256.effectivegatecpm.com/f6/1a/42/f61a4274586f36ba796ad9362c93a165.js'></script>
